// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should alter a color keyword in a single property 1`] = `
"
div {
  color: red
}
"
`;

exports[`should alter a color keyword in a single property and don’t touch others 1`] = `
"
div {
  color: red;
  border: none;
  width: 100%;
  height: 50px;
}
"
`;

exports[`should alter a color keyword in the complex values 1`] = `
"
div {
  color: red;
  border: 1px solid white;
  outline: 1px solid red
}
"
`;

exports[`should replace a color keyword with hex color 1`] = `
"
div {
  color: #fffeee
}
"
`;

exports[`should replace a color keyword with hsl() function 1`] = `
"
div {
  color: hsl(30,67%,17%);
}
"
`;

exports[`should replace a color keyword with hsla() function 1`] = `
"
div {
  color: hsla(30,67%,17%,0.5);
}
"
`;

exports[`should replace a color keyword with rgb() function 1`] = `
"
div {
  color: rgb(55,55,55);
}
"
`;

exports[`should replace a color keyword with rgba() function 1`] = `
"
div {
  color: rgba(55,55,55,0.5);
}
"
`;

exports[`should replace a color keyword with short hex color 1`] = `
"
div {
  color: #79b
}
"
`;
